--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,6 +58,7 @@
                     android:fontFamily="sans-serif"
                     android:textColor="@color/white"
                     android:textSize="16sp"
+                    android:textAlignment="textEnd"
                     tools:text="Jakasampurna, Kecamatan Bekasi Barat" />
 
             </RelativeLayout>
